update Ex2_JQ1_Lunar New Year Exercises Signed-off-by: Bui Trang <buithihuyentrangsp1@gmail.com>

--- a/Lunar New Year Exercises/JQ1/Ex2/index.html
+++ b/Lunar New Year Exercises/JQ1/Ex2/index.html
@@ -33,7 +33,7 @@
 	</div>
 	<script>
 		function Result(){
-			a= parseInt($("#numA").val());
+			 var a=($("#numA").val());
 			if(a<1){
 				alert("Vui lòng nhập số a lớn hơn 1!");
 			}
